--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,13 +4,20 @@ version = "0.1.0"
 authors = ["becker <github@deathbyescalator.com>"]
 edition = "2018"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+firefox_sync = ["rusqlite"]
 
 [dependencies]
 tantivy = "*"
 reqwest = { version = "*", features = ["blocking"] }
-futures = "0.3"
 select = "*"
 tempfile = "*"
 chrono = "*"
 
+rusqlite = { version = "*", optional = true }
+
+
+[[bin]]
+name = "firefox_sync"
+path = "src/firefox_sync/main.rs"
+required-features = ["firefox_sync"]
