--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["becker <github@deathbyescalator.com>"]
 edition = "2018"
 
 [features]
-firefox_sync = ["rusqlite"]
+firefox_sync = ["rusqlite", "glob", "dirs"]
 
 [dependencies]
 tantivy = "*"
@@ -14,10 +14,13 @@ select = "*"
 tempfile = "*"
 chrono = "*"
 
+
+dirs = { version = "*", optional = true }
 rusqlite = { version = "*", optional = true }
+glob = { version = "*", optional = true }
 
 
 [[bin]]
 name = "firefox_sync"
 path = "src/firefox_sync/main.rs"
-required-features = ["firefox_sync"]
+features = ["firefox_sync"]
