--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,8 @@
 debug/
 target/
 .private_search/
+.private_search_hashes/
+.firefox_sync_cache.toml
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
