--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ debug/
 target/
 .private_search/
 .private_search_hashes/
+.private_search_hash/
 .firefox_sync_cache.toml
 
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
