use tensor summary

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["becker <github@deathbyescalator.com>"]
 edition = "2018"
 
 [features]
-firefox_sync = ["rusqlite", "glob", "dirs", "probabilistic-collections", "triple_accel", "md5"]
+firefox_sync = ["rust-bert", "rusqlite", "glob", "dirs", "probabilistic-collections", "triple_accel", "md5"]
 
 [dependencies]
 tantivy = "*"
@@ -22,6 +22,7 @@ glob = { version = "*", optional = true }
 probabilistic-collections = { version = "*", optional = true, features = ["serde"] }
 triple_accel =  { version = "*", optional = true }
 md5 =  { version = "*", optional = true }
+rust-bert ={ version = "*", optional = true }
 
 [[bin]]
 name = "firefox_sync"
