--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["becker <github@deathbyescalator.com>"]
 edition = "2018"
 
 [features]
-firefox_sync = ["rust-bert", "rusqlite", "glob", "dirs", "probabilistic-collections", "triple_accel", "md5"]
+firefox_sync = [ "rusqlite", "glob", "dirs" ]
 
 [dependencies]
 tantivy = "*"
@@ -15,14 +15,15 @@ tempfile = "*"
 chrono = "*"
 lazy_static = "*"
 toml = "*"
+structopt = "*"
 
 dirs = { version = "*", optional = true }
 rusqlite = { version = "*", optional = true }
 glob = { version = "*", optional = true }
-probabilistic-collections = { version = "*", optional = true, features = ["serde"] }
-triple_accel =  { version = "*", optional = true }
-md5 =  { version = "*", optional = true }
-rust-bert ={ version = "*", optional = true }
+probabilistic-collections = { version = "*", features = ["serde"] }
+triple_accel =  { version = "*" }
+md5 =  { version = "*"}
+rust-bert ={ version = "*" }
 
 [[bin]]
 name = "firefox_sync"
