--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@ target/
 .private_search_hash/
 .firefox_sync_cache.toml
 
+*/.cache/*
+.cache/*
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 Cargo.lock
