--- a/search/package.json
+++ b/search/package.json
@@ -15,7 +15,5 @@
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-wasm.rs": "^1.2.16"
   },
-  "dependencies": {
-    "darkmode-js": "^1.5.7"
-  }
+  "dependencies": {}
 }
