--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ server = ["tokio", "actix-web","actix-cors", "actix-files", "actix-service", "fu
 tantivy = "0.13.2"
 ureq = "*"
 tempfile = "*"
-pdf-extract = "*"
+lopdf= "*"
 select = "*"
 chrono = "*"
 lazy_static = "*"
