--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,13 +23,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Cache Rust dependencies
-        uses: actions/cache@v2.1.2
-        with:
-          path: target
-          key: ${{ runner.OS }}-build-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.OS }}-build-
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v1.0.1
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
@@ -82,13 +77,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Cache Rust dependencies
-        uses: actions/cache@v2.1.2
-        with:
-          path: target
-          key: ${{ runner.OS }}-build-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.OS }}-build-
+      - name: Rust Cache
+        uses: Swatinem/rust-cache@v1.0.1
       - name: Install latest rust toolchain
         uses: actions-rs/toolchain@v1
         with:
