--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,8 @@ static = ["actix-web-static-files"]
 
 [dependencies]
 actix-web-static-files = {version="*", optional=true}
-actix-cors =  { version = "*", optional = true }
-actix-files =  { version = "*", optional = true }
+actix-cors =  { version = "0.4.1", optional = true }
+actix-files =  { version = "0.4.0", optional = true }
 actix-service = { version =  "1", optional = true }
 actix-web =  { version = "3", optional = true }
 env_logger = { version =  "0.7", optional = true }
