--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-slate
 title: Private Search
 description: A private search over urls you have visited before
-show_downloads: true
+show_downloads: false
