--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -16,7 +16,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: rustup component add rustfmt
       - run: cargo fmt -- --check
-  
+
   build-linux:
     runs-on: ubuntu-latest
 
@@ -37,7 +37,7 @@ jobs:
           && sudo apt-get install -y \
           libdbus-1-dev && cargo install --force cargo-strip
       - name: Build
-        run: cargo build --release --features "server static sync" && cargo strip
+        run: cargo build --bin chrome_sync --release --features "brave sync" && mv target/release/chrome_sync target/release/brave_sync && cargo build --release --features "server static sync" &&   cargo strip
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -45,7 +45,7 @@ jobs:
           file: target/release/firefox_sync
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-firefox-sync
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -53,7 +53,7 @@ jobs:
           file: target/release/chrome_sync
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-chrome-sync
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -61,7 +61,7 @@ jobs:
           file: target/release/personal_search
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-personal-search                
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -70,7 +70,16 @@ jobs:
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
           release_name: ${{ runner.OS }}-server
-        
+          release_name: ${{ runner.OS }}-private-search
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@2.2.0
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/brave_sync
+          tag: ${{ runner.OS }}-build-${{ github.ref }}
+          overwrite: true
+          release_name: ${{ runner.OS }}-private-search
+
   build-mac:
     runs-on: macos-latest
     steps:
@@ -88,7 +97,7 @@ jobs:
       - name: Install system dependencies
         run: cargo install --force cargo-strip
       - name: Build
-        run: cargo build --release --features "server static sync" && cargo strip
+        run: cargo build --bin chrome_sync --release --features "brave sync" && mv target/release/chrome_sync target/release/brave_sync && cargo build --release --features "server static sync" &&   cargo strip
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -96,7 +105,15 @@ jobs:
           file: target/release/firefox_sync
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-firefox-sync
+          release_name: ${{ runner.OS }}-private-search
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@2.2.0
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/brave_sync
+          tag: ${{ runner.OS }}-build-${{ github.ref }}
+          overwrite: true
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -104,7 +121,7 @@ jobs:
           file: target/release/chrome_sync
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-chrome-sync
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -112,7 +129,7 @@ jobs:
           file: target/release/personal_search
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-personal-search                
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -120,9 +137,9 @@ jobs:
           file: target/release/server
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-server
-      
-      
+          release_name: ${{ runner.OS }}-private-search
+
+
   build-windows:
     runs-on: windows-latest
     steps:
@@ -140,7 +157,7 @@ jobs:
       - name: Install system dependencies
         run: cargo install --force cargo-strip
       - name: Build
-        run: cargo build --release --features "server static sync" && cargo strip
+        run: cargo build --bin chrome_sync --release --features "brave sync" && mv target/release/chrome_sync target/release/brave_sync && cargo build --release --features "server static sync" &&   cargo strip
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -148,7 +165,7 @@ jobs:
           file: target/release/firefox_sync.exe
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-firefox-sync
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -156,7 +173,7 @@ jobs:
           file: target/release/chrome_sync.exe
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-chrome-sync
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -164,7 +181,7 @@ jobs:
           file: target/release/personal_search.exe
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-personal-search                
+          release_name: ${{ runner.OS }}-private-search
       - name: Upload binaries to release
         uses: svenstaro/upload-release-action@2.2.0
         with:
@@ -172,6 +189,14 @@ jobs:
           file: target/release/server.exe
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
-          release_name: ${{ runner.OS }}-server
-      
+          release_name: ${{ runner.OS }}-private-search
+      - name: Upload binaries to release
+        uses: svenstaro/upload-release-action@2.2.0
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file: target/release/brave_sync
+          tag: ${{ runner.OS }}-build-${{ github.ref }}
+          overwrite: true
+          release_name: ${{ runner.OS }}-private-search
+
 
