--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,7 +36,7 @@ select = "*"
 serde = { version = "1", features = ["derive"]}
 serde_json =  { version = "1" }
 structopt = "*"
-tantivy = "0.13.2"
+tantivy = { git = "https://github.com/tantivy-search/tantivy/",branch="issue/915", version= "0.13.2"}
 toml = "*"
 triple_accel =  { version = "*" }
 ureq = "*"
