--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -193,7 +193,7 @@ jobs:
         uses: svenstaro/upload-release-action@2.2.0
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: target/release/brave_sync
+          file: target/release/brave_sync.exe
           tag: ${{ runner.OS }}-build-${{ github.ref }}
           overwrite: true
           release_name: ${{ runner.OS }}-private-search
