--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,16 +5,15 @@ authors = ["becker <github@deathbyescalator.com>"]
 edition = "2018"
 
 [features]
-ml = ["rust-bert"]
 brave = []
-niced = ["iced", "iced_native", "webbrowser"]
-sync = [ "rusqlite", "tempfile", "rayon"]
+sync = [ "rusqlite", "tempfile", "csv"]
 server = [ "tokio", "actix-web","actix-cors", "actix-files", "actix-service", "futures", "env_logger", "json"]
 static = ["actix-web-static-files"]
 toolkit = ["termimad", "html2md"]
 
 [dependencies]
 rand = '*'
+csv =  { version = "1.1", optional = true }
 actix-cors =  { version = "0.4.1", optional = true }
 actix-files =  { version = "0.4.0", optional = true }
 actix-service = { version =  "1", optional = true }
@@ -25,7 +24,6 @@ futures =  { version = "0.3.1", optional = true }
 html2md = {version="*", optional=true}
 json =  { version = "0.12", optional = true }
 rusqlite = { version = "*", optional = true, features= ["bundled","chrono","unlock_notify"] }
-rust-bert = { version = "*", optional = true }
 tempfile = { version="*", optional = true}
 termimad = {version="*", optional=true}
 tokio = { version="*", optional = true, features=["rt"] }
@@ -48,26 +46,22 @@ triple_accel =  { version = "*" }
 ureq = "2.1.1"
 url = "*"
 
-iced = {version = "0.3", optional=true}
-iced_native = {version="*", optional=true}
-webbrowser = {version="*", optional=true}
-
 [[bin]]
-name = "niced"
-path = "src/bin/niced/main.rs"
-features = ["sync", "niced", "server" ]
-default = ["sync", "niced", "server" ]
+name = "csv_processor"
+path = "src/bin/csv_processor/main.rs"
+features = ["sync"]
+default= ["sync"]
 
 [[bin]]
 name = "chrome_sync"
 path = "src/bin/chrome_sync/main.rs"
-features = ["sync", "ml"]
+features = ["sync"]
 default= ["sync"]
 
 [[bin]]
 name = "firefox_sync"
 path = "src/bin/firefox_sync/main.rs"
-features = ["sync", "ml"]
+features = ["sync"]
 default =["sync"]
 
 [[bin]]
